# gecommon

./: README.md  pyproject.toml
docs/: comparison.md  parallel.md
gecommon/: __init__.py  comparison.py  parallel.py
src/gecommon/: utils.py
