[project]
name = "gecommon"
version = "0.1"
description = "A common toolkit for Grammatical Error Correction"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "errant >= 2.3.3",
    "matplotlib >= 3.8.0"
]

[tool.setuptools]
package-dir = {"" = "gecommon"}